--- a/src/_component/layout/layout.pug
+++ b/src/_component/layout/layout.pug
@@ -9,4 +9,6 @@ html
 
     link(rel="stylesheet", href="style.css")
   body
+    include ../header/header
     block awesome-content
+    include ../footer/footer
