--- a/src/index.pug
+++ b/src/index.pug
@@ -5,4 +5,4 @@ block awesome-config
     let description = `This is made using PURE HTML5 and CSS3 techniques`
 block awesome-content
   .header_wrapper
-    h1 hello
+    p this will be the content
