--- a/src/style.scss
+++ b/src/style.scss
@@ -1,2 +1,4 @@
 @import "_component/config/reset";
 @import "_component/config/color";
+@import "_component/header/header";
+@import "_component/footer/footer";
