Work on the header structure and content

--- a/src/_component/header/header.pug
+++ b/src/_component/header/header.pug
@@ -1,3 +1,5 @@
 nav.header
-  span.header__name Istvan Acs
-  span.mr-menu
+  .header__top
+    span.header__name Istvan Acs
+    span.mr-menu
+  .header__menu-list
