--- a/src/_component/header/header.pug
+++ b/src/_component/header/header.pug
@@ -1,7 +1,8 @@
 nav.header
   .header__top
     span.header__name Istvan Acs
-    span.mr-menu(for="toogle-top-menu")
+    label.mr-menu(for="toogle-top-menu")
+  input(type="checkbox", id="toogle-top-menu")
   .header__menu-list
     -
       var menuList = [
@@ -31,9 +32,8 @@ nav.header
         link: '#what-can-i-do',
         }
       ]
-  input(type="checkbox", id="toogle-top-menu")
-  ul.header__menu-list
-    each menu in menuList
-      a.menu__link(href=menu.link)
-        span(class=`mr-${menu.icon}`)
-        span.menu__label=menu.label
+    .menu-list
+      each menu in menuList
+        a.menu__link(href=menu.link)
+          span(class=`mr-${menu.icon}`)
+          span.menu__label=menu.label
