--- a/src/_component/header/header.scss
+++ b/src/_component/header/header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: $color-dodger-blue;
+  background-color: $color-mine-shaft;
   color: $color-white;
 }
 
@@ -16,6 +16,7 @@
   font-size: 2rem;
   padding: 1.5rem;
   display: inline-block;
+  letter-spacing: 1px;
 }
 
 .mr-menu {
@@ -23,13 +24,13 @@
   padding: 1.5rem;
 }
 
-.header__menu-link {
-  color: $color-white;
-  font-size: 1.5rem;
-  text-decoration: none;
-  padding: 1.5rem;
-  display: block;
-}
+// .header__menu-link {
+//   color: $color-white;
+//   font-size: 1.5rem;
+//   text-decoration: none;
+//   padding: 1.5rem;
+//   display: block;
+// }
 
 .header__menu-list {
   display: none;
@@ -40,17 +41,56 @@
 }
 
 #toogle-top-menu:checked + .header__menu-list {
-  display: inherit;
+  display: inline-block;
+  padding: 0;
+  margin: 0.5em 1em;
 }
 
+
 .menu__link {
-  display: flex;
-  padding: 0.7rem 1rem;
+  display: table;
+  padding: 0.7rem 0.5rem;
   color: $color-white;
+  position: relative;
+  letter-spacing: 1px;
   font-size: 1.5rem;
   text-decoration: none;
   text-transform: capitalize;
+  // border: 1px solid red;
+
+  &:before,
+  &:after {
+    content: "";
+    height: 1rem;
+    width: 1rem;
+    position: absolute;
+    transition: all 0.35s ease;
+    opacity: 0;
+  }
+
+  &:before {
+    right: 0;
+    top: 0;
+    border-right: 2px solid red;
+    border-top: 2px solid red;
+    transform: translate(-100%, 50%);
+  }
+  
+  &:after {
+    left: 0;
+    bottom: 0;
+    border-left: 2px solid red;
+    border-bottom: 2px solid red;
+    transform: translate(100%, -50%);
+  }
+  
+  &:hover:before,
+  &:hover:after {
+    transform: translate(0%, 0%);
+    opacity: 1;
+  }
 }
+
 
 .menu__label {
   padding: 0 1rem;
