--- a/src/_component/header/header.scss
+++ b/src/_component/header/header.scss
@@ -7,11 +7,16 @@
   height: 52px;
   display: flex;
   justify-content: space-between;
+  background-color: $color-mine-shaft;
   align-items: center;
+  position: fixed;
+  left: 0;
+  right: 0;
   // border: 0.1rem solid $color-mercury;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 
               0 2px 10px 0 rgba(0,0,0,0.12);
 }
+
 .header__name {
   font-size: 2rem;
   padding: 1.5rem;
@@ -21,19 +26,20 @@
 
 .mr-menu {
   font-size: 2.5rem;
-  padding: 1.5rem;
+  padding: 0.5rem;
+  margin: 0.8rem;
+  border-radius: 0.3rem;
+  border: 0.1rem solid $color-white;
+  cursor: pointer;
 }
 
-// .header__menu-link {
-//   color: $color-white;
-//   font-size: 1.5rem;
-//   text-decoration: none;
-//   padding: 1.5rem;
-//   display: block;
-// }
-
 .header__menu-list {
-  display: none;
+  // display: none;
+  position: fixed;
+  transition: 0.35s;
+  top: -100%;
+  left: 0;
+  right: 0;
 }
 
 #toogle-top-menu {
@@ -41,9 +47,9 @@
 }
 
 #toogle-top-menu:checked + .header__menu-list {
-  display: inline-block;
-  padding: 0;
-  margin: 0.5em 1em;
+  // display: inline-block;
+  top: 5.2rem;
+  
 }
 
 
@@ -56,7 +62,6 @@
   font-size: 1.5rem;
   text-decoration: none;
   text-transform: capitalize;
-  // border: 1px solid red;
 
   &:before,
   &:after {
@@ -94,4 +99,8 @@
 
 .menu__label {
   padding: 0 1rem;
+}
+
+.menu-list {
+  background-color: $color-mine-shaft;
 }
