--- a/src/_component/layout/layout.pug
+++ b/src/_component/layout/layout.pug
@@ -10,5 +10,7 @@ html
     link(rel="stylesheet", href="style.css")
   body
     include ../header/header
-    block awesome-content
-    include ../footer/footer
+    .content
+      block awesome-content
+    .footer
+      include ../footer/footer
