Create a structure for about me and add some content to it

--- a/src/index.pug
+++ b/src/index.pug
@@ -4,6 +4,4 @@ block awesome-config
     let title= `Istvan Acs Resume`
     let description = `This is made using PURE HTML5 and CSS3 techniques`
 block awesome-content
-  .header_wrapper
-    p this will be the content
-      span.mr-home3
+  include _component/about-me/about-me
