--- a/src/style.scss
+++ b/src/style.scss
@@ -3,4 +3,5 @@
 @import "_component/config/font";
 @import "_component/layout/layout";
 @import "_component/header/header";
+@import "_component/about-me/about-me";
 @import "_component/footer/footer";
